<resources>
    <string name="app_name">library</string>
    <string name="home_device_rename_prompt">中文限四个字符，英文限九个字符</string>

    <string name="util_common_cancel">取消</string>
    <string name="util_common_reload">重试</string>
    <string name="util_common_confirm">知道了</string>
    <string name="util_common_ok">确定</string>
    <string name="util_common_yes">是</string>
    <string name="util_common_no">否</string>
    <string name="util_common_open">打开</string>
    <string name="util_common_close">关闭</string>
    <string name="util_common_start">开启</string>
    <string name="util_prompt_title">提示</string>

    <!-- update -->
    <string name="dialog_update_content">新增功能</string>
    <string name="dialog_update_version">发现新版本：</string>
    <string name="dialog_update_version_size">版本大小：%1$s</string>
    <string name="dialog_update_text">立即更新</string>

    <string name="picker_hour">时</string>
    <string name="picker_minute">分</string>

</resources>
