<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:padding="@dimen/picker_timer_padding"
        android:orientation="horizontal">

        <com.jrue.appframe.lib.widget.PickerView
            android:id="@+id/hourPickerView"
            android:layout_width="@dimen/picker_timer_margin_width"
            android:layout_height="@dimen/picker_timer_margin_height" />


        <TextView
            android:id="@+id/hourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/picker_timer_margin_left_5dp"
            android:text="@string/picker_hour"
            android:textColor="@color/text_red"
            android:textSize="@dimen/picker_timer_text_size"
            android:textStyle="bold" />

        <com.jrue.appframe.lib.widget.PickerView
            android:id="@+id/minutePickerView"
            android:layout_width="@dimen/picker_timer_margin_width"
            android:layout_height="@dimen/picker_timer_margin_height"
            android:layout_marginLeft="@dimen/picker_timer_margin_left_20dp" />

        <TextView
            android:id="@+id/minuteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/picker_timer_margin_left_5dp"
            android:text="@string/picker_minute"
            android:textColor="@color/text_red"
            android:textSize="@dimen/picker_timer_text_size"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="center_horizontal"
        android:background="@color/popup_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_btn_height"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/list_item_background"
            android:text="@string/util_common_cancel"
            android:textColor="@color/popup_btn_text_lowlight_color"
            android:textSize="@dimen/popup_btn_text_size" />


        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/popup_line_color" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/list_item_background"
            android:text="@string/util_common_ok"
            android:textColor="@color/popup_btn_text_highlight_color"
            android:textSize="@dimen/popup_btn_text_size" />

    </LinearLayout>

</LinearLayout>