<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp">

        <ImageView
            android:id="@+id/updateForeground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/update_foreground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/updateVersionHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_update_version"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/updateVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/popup_version_size_text"/>

                <TextView
                    android:id="@+id/updateSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    android:textColor="@color/popup_version_size_text" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/dialog_update_content"
        android:textSize="16sp"
        android:textColor="@color/text_black"/>

    <TextView
        android:id="@+id/updateContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="@dimen/popup_title_margin_bottom"
        android:gravity="left"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/popup_context_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_btn_height"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/popup_margin_top"
        android:layout_marginBottom="@dimen/popup_margin_big_bottom"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updateBtn"
            style="@style/BlueRoundBtnStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/dialog_update_text"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>